[gd_scene load_steps=6 format=3 uid="uid://cgame001"]

[ext_resource type="Script" uid="uid://bph4jx42cmo0p" path="res://scenes/game/game.gd" id="1_game"]
[ext_resource type="PackedScene" uid="uid://cplayer001" path="res://scenes/player/player.tscn" id="2_player"]
[ext_resource type="PackedScene" uid="uid://cdialogbox001" path="res://scenes/ui/dialogue_box/dialogue_box.tscn" id="3_dialogue"]
[ext_resource type="PackedScene" uid="uid://shigphg3a46g" path="res://scenes/ui/interaction_prompt.tscn" id="4_prompt"]
[ext_resource type="PackedScene" uid="uid://chud00001" path="res://scenes/ui/hud/hud.tscn" id="5_hud"]

[node name="Game" type="Node2D"]
script = ExtResource("1_game")

[node name="ZoneContainer" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("2_player")]

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 10

[node name="DialogueBox" parent="UILayer" instance=ExtResource("3_dialogue")]
visible = false
layout_mode = 3

[node name="InteractionPrompt" parent="UILayer" instance=ExtResource("4_prompt")]
visible = false
layout_mode = 3

[node name="HUD" parent="UILayer" instance=ExtResource("5_hud")]
